# DPLM

./: .gitignore  Procfile  README.md  coap_client.py  coap_server.py  docker-compose.yml  dplmtool.py  requirements.txt  sensor_monitor.py  server.py  topic.md
.github/workflows/: django.yml
coap/: coap_client.py  coap_server.py
dplm_client/: dplm_client.ino
dplm_console/: dplmtool.py  sensor_monitor.py  session
dplm_desktop/: .gitignore  CMakeLists.txt  DPLM.postman_collection.json  dplm.cpp  dplm.h  dplm.ui  endpointForm.ui  flat_base.xml  frame_base.xml  httpRequest.cpp  httpRequest.hpp  login.ui  main.cpp  plotSensor.py  python_utilities.h  switchNetworkForm.ui  web_client.hpp  writeForm.ui
dplm_desktop/cpp-httplib/: httplib.h
dplm_desktop/plot_scripts/: plotSensor.py
dplmhub_root/: Dockerfile  manage.py  requirements.txt
dplmhub_root/devs/: admin.py  apps.py  async_views.py  interfaces.py  models.py  mqtt_client.py  mqtt_server.py  serializers.py  tests.py  urls.py  utils.py  views.py
dplmhub_root/devs/domain/: interfaces.py  mqtt_client.py  streams.py
dplmhub_root/devs/migrations/: 0001_initial.py  0002_device_delete_page.py  0003_remove_device_uid_device_clientid_and_more.py  0004_device_last_update_device_wifi_ssid_and_more.py  0005_controller_sensor_alter_device_user_grid_device_grid.py  0006_grid_broker_adress.py
dplmhub_root/dplmhub/: asgi.py  settings.py  urls.py  wsgi.py
dplmhub_root/dplmhub/templates/: 404.html  500.html  index.html
dplmhub_root/dplmhub/templates/pages/: contact.html  page.html
dplmhub_root/dplmhub/templates/registration/: login.html  registration.html  success.html
dplmhub_root/userAuth/: admin.py  models.py  scripts.py  serializers.py  tests.py  urls.py  utils.py  views.py
dplmhub_root/userAuth/migrations/: 0001_initial.py
